Some customization on resources page

--- a/resources.html
+++ b/resources.html
@@ -85,16 +85,16 @@
                     <i class="fas fa-chevron-down dropdown-arrow"></i>
                 </div>
                 <div class="dropdown-content" id="syllabusDropdown">
-                    <div class="sub-menu-item" data-branch="cse" data-category="syllabus">B.Tech CSE</div>
-                    <div class="sub-menu-item" data-branch="ece" data-category="syllabus">B.Tech ECE</div>
-                    <div class="sub-menu-item" data-branch="me" data-category="syllabus">B.Tech ME</div>
-                    <div class="sub-menu-item" data-branch="ee" data-category="syllabus">B.Tech EE</div>
-                    <div class="sub-menu-item" data-branch="ce" data-category="syllabus">B.Tech CE</div>
-                    <div class="sub-menu-item" data-branch="iot" data-category="syllabus">B.Tech IoT</div>
-                    <div class="sub-menu-item" data-branch="it" data-category="syllabus">B.Tech IT</div>
-                    <div class="sub-menu-item" data-branch="bct" data-category="syllabus">B.Tech BCT</div>
-                    <div class="sub-menu-item" data-branch="aiads" data-category="syllabus">B.Tech AIADS</div>
-                    <div class="sub-menu-item" data-branch="aiaml" data-category="syllabus">B.Tech AIAML</div>
+                    <div class="sub-menu-item" data-branch="cse" data-category="syllabus">CSE</div>
+                    <div class="sub-menu-item" data-branch="ec" data-category="syllabus">ECE</div>
+                    <div class="sub-menu-item" data-branch="me" data-category="syllabus">ME</div>
+                    <div class="sub-menu-item" data-branch="ee" data-category="syllabus">EE</div>
+                    <div class="sub-menu-item" data-branch="ce" data-category="syllabus">CE</div>
+                    <div class="sub-menu-item" data-branch="iot" data-category="syllabus">IoT</div>
+                    <div class="sub-menu-item" data-branch="it" data-category="syllabus">IT</div>
+                    <div class="sub-menu-item" data-branch="bct" data-category="syllabus">BCT</div>
+                    <div class="sub-menu-item" data-branch="aiads" data-category="syllabus">AIADS</div>
+                    <div class="sub-menu-item" data-branch="aiaml" data-category="syllabus">AIAML</div>
                 </div>
                 <div class="menu-item dropdown-item" data-category="pyqs">
                     <i class="fas fa-question-circle"></i>
@@ -102,16 +102,16 @@
                     <i class="fas fa-chevron-down dropdown-arrow"></i>
                 </div>
                 <div class="dropdown-content" id="pyqsDropdown">
-                    <div class="sub-menu-item" data-branch="cse" data-category="pyqs">B.Tech CSE</div>
-                    <div class="sub-menu-item" data-branch="ece" data-category="pyqs">B.Tech ECE</div>
-                    <div class="sub-menu-item" data-branch="me" data-category="pyqs">B.Tech ME</div>
-                    <div class="sub-menu-item" data-branch="ee" data-category="pyqs">B.Tech EE</div>
-                    <div class="sub-menu-item" data-branch="ce" data-category="pyqs">B.Tech CE</div>
-                    <div class="sub-menu-item" data-branch="iot" data-category="pyqs">B.Tech IoT</div>
-                    <div class="sub-menu-item" data-branch="it" data-category="pyqs">B.Tech IT</div>
-                    <div class="sub-menu-item" data-branch="bct" data-category="pyqs">B.Tech BCT</div>
-                    <div class="sub-menu-item" data-branch="aiads" data-category="pyqs">B.Tech AIADS</div>
-                    <div class="sub-menu-item" data-branch="aiaml" data-category="pyqs">B.Tech AIAML</div>
+                    <div class="sub-menu-item" data-branch="cse" data-category="pyqs">CSE</div>
+                    <div class="sub-menu-item" data-branch="ec" data-category="pyqs">ECE</div>
+                    <div class="sub-menu-item" data-branch="me" data-category="pyqs">ME</div>
+                    <div class="sub-menu-item" data-branch="ee" data-category="pyqs">EE</div>
+                    <div class="sub-menu-item" data-branch="ce" data-category="pyqs">CE</div>
+                    <div class="sub-menu-item" data-branch="iot" data-category="pyqs">IoT</div>
+                    <div class="sub-menu-item" data-branch="it" data-category="pyqs">IT</div>
+                    <div class="sub-menu-item" data-branch="bct" data-category="pyqs">BCT</div>
+                    <div class="sub-menu-item" data-branch="aiads" data-category="pyqs">AIADS</div>
+                    <div class="sub-menu-item" data-branch="aiaml" data-category="pyqs">AIAML</div>
                 </div>
             </div>
         </aside>
