--- a/resources.html
+++ b/resources.html
@@ -55,6 +55,28 @@
                 <button class="dark-mode-toggle" id="darkModeToggle">
                     <i class="fas fa-moon"></i>
                 </button>
+                <button class="mobile-menu-toggle" id="mobileMenuToggle">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+            <!-- Mobile Navigation Menu -->
+            <div class="mobile-nav-menu" id="mobileNavMenu">
+                <a href="index.html" class="mobile-nav-link">
+                    <i class="fas fa-home"></i>
+                    <span>Home</span>
+                </a>
+                <a href="resources.html" class="mobile-nav-link active">
+                    <i class="fas fa-book"></i>
+                    <span>Resources</span>
+                </a>
+                <a href="#" class="mobile-nav-link" onclick="showComingSoon('About')">
+                    <i class="fas fa-info-circle"></i>
+                    <span>About</span>
+                </a>
+                <a href="#" class="mobile-nav-link" onclick="showComingSoon('Contact Us')">
+                    <i class="fas fa-envelope"></i>
+                    <span>Contact Us</span>
+                </a>
             </div>
         </div>
     </nav>
@@ -84,34 +106,94 @@
                     <span>Syllabus</span>
                     <i class="fas fa-chevron-down dropdown-arrow"></i>
                 </div>
-                <div class="dropdown-content" id="syllabusDropdown">
-                    <div class="sub-menu-item" data-branch="cse" data-category="syllabus">CSE</div>
-                    <div class="sub-menu-item" data-branch="ec" data-category="syllabus">ECE</div>
-                    <div class="sub-menu-item" data-branch="me" data-category="syllabus">ME</div>
-                    <div class="sub-menu-item" data-branch="ee" data-category="syllabus">EE</div>
-                    <div class="sub-menu-item" data-branch="ce" data-category="syllabus">CE</div>
-                    <div class="sub-menu-item" data-branch="iot" data-category="syllabus">IoT</div>
-                    <div class="sub-menu-item" data-branch="it" data-category="syllabus">IT</div>
-                    <div class="sub-menu-item" data-branch="bct" data-category="syllabus">BCT</div>
-                    <div class="sub-menu-item" data-branch="aiads" data-category="syllabus">AIADS</div>
-                    <div class="sub-menu-item" data-branch="aiaml" data-category="syllabus">AIAML</div>
+                <div class="sidebar-dropdown-content" id="syllabusDropdown">
+                    <div class="sub-menu-item" data-branch="cse" data-category="syllabus">
+                        <i class="fas fa-code"></i>
+                        <span>CSE</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="ec" data-category="syllabus">
+                        <i class="fas fa-microchip"></i>
+                        <span>ECE</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="me" data-category="syllabus">
+                        <i class="fas fa-cogs"></i>
+                        <span>ME</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="ee" data-category="syllabus">
+                        <i class="fas fa-bolt"></i>
+                        <span>EE</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="ce" data-category="syllabus">
+                        <i class="fas fa-building"></i>
+                        <span>CE</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="iot" data-category="syllabus">
+                        <i class="fas fa-wifi"></i>
+                        <span>IoT</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="it" data-category="syllabus">
+                        <i class="fas fa-laptop"></i>
+                        <span>IT</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="bct" data-category="syllabus">
+                        <i class="fas fa-broadcast-tower"></i>
+                        <span>BCT</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="aiads" data-category="syllabus">
+                        <i class="fas fa-brain"></i>
+                        <span>AIADS</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="aiaml" data-category="syllabus">
+                        <i class="fas fa-robot"></i>
+                        <span>AIAML</span>
+                    </div>
                 </div>
                 <div class="menu-item dropdown-item" data-category="pyqs">
                     <i class="fas fa-question-circle"></i>
                     <span>PYQs</span>
                     <i class="fas fa-chevron-down dropdown-arrow"></i>
                 </div>
-                <div class="dropdown-content" id="pyqsDropdown">
-                    <div class="sub-menu-item" data-branch="cse" data-category="pyqs">CSE</div>
-                    <div class="sub-menu-item" data-branch="ec" data-category="pyqs">ECE</div>
-                    <div class="sub-menu-item" data-branch="me" data-category="pyqs">ME</div>
-                    <div class="sub-menu-item" data-branch="ee" data-category="pyqs">EE</div>
-                    <div class="sub-menu-item" data-branch="ce" data-category="pyqs">CE</div>
-                    <div class="sub-menu-item" data-branch="iot" data-category="pyqs">IoT</div>
-                    <div class="sub-menu-item" data-branch="it" data-category="pyqs">IT</div>
-                    <div class="sub-menu-item" data-branch="bct" data-category="pyqs">BCT</div>
-                    <div class="sub-menu-item" data-branch="aiads" data-category="pyqs">AIADS</div>
-                    <div class="sub-menu-item" data-branch="aiaml" data-category="pyqs">AIAML</div>
+                <div class="sidebar-dropdown-content" id="pyqsDropdown">
+                    <div class="sub-menu-item" data-branch="cse" data-category="pyqs">
+                        <i class="fas fa-code"></i>
+                        <span>CSE</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="ec" data-category="pyqs">
+                        <i class="fas fa-microchip"></i>
+                        <span>ECE</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="me" data-category="pyqs">
+                        <i class="fas fa-cogs"></i>
+                        <span>ME</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="ee" data-category="pyqs">
+                        <i class="fas fa-bolt"></i>
+                        <span>EE</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="ce" data-category="pyqs">
+                        <i class="fas fa-building"></i>
+                        <span>CE</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="iot" data-category="pyqs">
+                        <i class="fas fa-wifi"></i>
+                        <span>IoT</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="it" data-category="pyqs">
+                        <i class="fas fa-laptop"></i>
+                        <span>IT</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="bct" data-category="pyqs">
+                        <i class="fas fa-broadcast-tower"></i>
+                        <span>BCT</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="aiads" data-category="pyqs">
+                        <i class="fas fa-brain"></i>
+                        <span>AIADS</span>
+                    </div>
+                    <div class="sub-menu-item" data-branch="aiaml" data-category="pyqs">
+                        <i class="fas fa-robot"></i>
+                        <span>AIAML</span>
+                    </div>
                 </div>
             </div>
         </aside>
