UI customized, some features added, issues and bugs solved

--- a/resources.html
+++ b/resources.html
@@ -81,6 +81,9 @@
         </div>
     </nav>
 
+    <!-- Blur Overlay for Mobile Menu -->
+    <div class="blur-overlay" id="blurOverlay"></div>
+
     <!-- Main Container -->
     <div class="main-container">
         <!-- Left Sidebar -->
