--- a/index.html
+++ b/index.html
@@ -336,6 +336,21 @@
                         <button type="submit" class="login-btn">Login</button>
                         <button type="button" class="guest-btn" id="guestBtn">Continue as Guest</button>
                     </form>
+                    <div class="or-section">
+                        <span class="or-line"></span>
+                        <span class="or-text">or</span>
+                        <span class="or-line"></span>
+                    </div>
+                    <div class="sso-buttons">
+                        <button type="button" class="sso-btn" id="googleSSOBtn">
+                            <span class="sso-logo-circle"><img src="images/google.png" alt="Google" /></span>
+                            <span>Continue with Google</span>
+                        </button>
+                        <button type="button" class="sso-btn" id="githubSSOBtn">
+                            <span class="sso-logo-circle"><img src="images/github_logo.png" alt="GitHub" /></span>
+                            <span>Continue with GitHub</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
