--- a/index.html
+++ b/index.html
@@ -341,14 +341,12 @@
                         <span class="or-text">or</span>
                         <span class="or-line"></span>
                     </div>
-                    <div class="sso-buttons">
-                        <button type="button" class="sso-btn" id="googleSSOBtn">
+                    <div class="sso-buttons sso-row">
+                        <button type="button" class="sso-btn sso-circle" id="googleSSOBtn">
                             <span class="sso-logo-circle"><img src="images/google.png" alt="Google" /></span>
-                            <span>Continue with Google</span>
                         </button>
-                        <button type="button" class="sso-btn" id="githubSSOBtn">
+                        <button type="button" class="sso-btn sso-circle" id="githubSSOBtn">
                             <span class="sso-logo-circle"><img src="images/github_logo.png" alt="GitHub" /></span>
-                            <span>Continue with GitHub</span>
                         </button>
                     </div>
                 </div>
