--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                             <i class="fas fa-robot"></i>
                         </div>
                         <h3>SATI ChatBot</h3>
-                        <p>Your Institute Guide</p>
+                        <!-- Removed subtitle for compactness -->
                     </div>
                     <form class="login-form" id="loginForm">
                         <div class="form-group">
