API will run on localhost as well as on deployment page

--- a/resources.html
+++ b/resources.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/preview.png">
     <meta name="author" content="Team FluxoNauts">
-    <meta name="og:url" content="https://safal-tiwari.github.io/SATI-ChatBot/resources">
+    <meta name="og:url" content="https://sati-chatbot.vercel.app/resources">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="robots" content="index, follow">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
