preview image updated, localhost API fetching properly and made SEO familiar

--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
     <title>Resources - SATI ChatBot</title>
     <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
     <meta name="description"
-        content="SATI - Hybrid AI Chatbot with dual API support (Google gemini + Groq cloud). Resources provider.">
+        content="Your intelligent assistant for Samrat Ashok Technological Institute resources and information.">
     <meta name="keywords"
         content="SATI ChatBot, SATI, AI, chatbot, hybrid AI, dual API, dynamic model switching, real-time chat, export functionality, modern Streamlit UI, cloud-based AI interactions, Resources, Student Helper">
     <meta property="og:type" content="website">
