--- a/index.html
+++ b/index.html
@@ -397,7 +397,10 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script>
+        window.supabase = supabase;
+    </script>
     <script src="script.js"></script>
 </body>
 
