--- a/index.html
+++ b/index.html
@@ -504,14 +504,9 @@
     <script>
         // Make Supabase available globally
         window.supabase = supabase;
-        
-        // Load Supabase key from environment if available
-        // This will be replaced during build process in production
-        if (typeof SUPABASE_KEY !== 'undefined') {
-            window.SUPABASE_CONFIG = window.SUPABASE_CONFIG || {};
-            window.SUPABASE_CONFIG.KEY = SUPABASE_KEY;
-        }
     </script>
+    <script src="config.js"></script>
+    <script src="api-integration.js"></script>
     <script src="script.js"></script>
 </body>
 
