Fix Vercel deployment issues

--- a/resources.html
+++ b/resources.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Your intelligent assistant for Samrat Ashok Technological Institute resources and information.">
     <meta name="keywords"
-        content="SATI ChatBot, SATI, AI, chatbot, hybrid AI, dual API, dynamic model switching, real-time chat, export functionality, modern Streamlit UI, cloud-based AI interactions, Resources, Student Helper">
+        content="SATI ChatBot, SATI, AI, chatbot, hybrid AI, dual API, dynamic model switching, real-time chat, export functionality, cloud-based AI interactions, Resources, Student Helper">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/preview.png">
     <meta name="author" content="Team FluxoNauts">
