--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - SATI ChatBot</title>
+    <title>About Us- SATI ChatBot</title>
     <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
     <meta name="description"
         content="Learn about SATI ChatBot - Your intelligent assistant for Samrat Ashok Technological Institute resources and information.">
     <meta name="keywords"
-        content="SATI ChatBot, About SATI, AI chatbot, hybrid AI, dual API, dynamic model switching, real-time chat, export functionality, modern Streamlit UI, cloud-based AI interactions">
+        content="SATI ChatBot, About SATI, AI chatbot, hybrid AI, dual API, dynamic model switching, real-time chat, export functionality, cloud-based AI interactions">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/preview.png">
     <meta name="author" content="Team FluxoNauts">
