made some changes

--- a/index.html
+++ b/index.html
@@ -341,7 +341,10 @@
                             <label for="password">Password</label>
                             <input type="password" id="password" required>
                         </div>
-                        <button type="submit" class="login-btn">Login</button>
+                        <div class="auth-actions">
+                            <button type="submit" class="login-btn">Login</button>
+                            <button type="button" class="login-btn" id="signupBtn">Sign Up</button>
+                        </div>
                         <button type="button" class="guest-btn" id="guestBtn">Continue as Guest</button>
                     </form>
                     <div class="or-section">
