login notification issue solved and about us page customized

--- a/contact.html
+++ b/contact.html
@@ -190,14 +190,14 @@
             text-decoration: underline;
         }
 
-        .social-section {
+        /* .social-section {
             background: var(--card-bg);
             border-radius: 20px;
             padding: 2.5rem;
             text-align: center;
             box-shadow: var(--shadow);
             margin-bottom: 3rem;
-        }
+        } */
 
         .social-grid {
             display: grid;
@@ -317,7 +317,7 @@
 
             .contact-form,
             .contact-info,
-            .social-section,
+            /* .social-section, */
             .faq-section {
                 padding: 1.5rem;
             }
@@ -518,7 +518,7 @@
         </div>
 
         <!-- Social Media Section -->
-        <section class="social-section">
+        <!-- <section class="social-section">
             <h2 style="color: var(--primary-color); margin-bottom: 1rem;">
                 <i class="fas fa-share-alt"></i> Connect with Us
             </h2>
@@ -557,7 +557,7 @@
                     </a>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- FAQ Section -->
         <section class="faq-section">
