trying the bucket system

--- a/index.html
+++ b/index.html
@@ -516,6 +516,8 @@
         console.log('✅ Supabase CDN loaded:', !!window.supabase);
         console.log('Supabase version:', window.supabase?.VERSION || 'unknown');
     </script>
+    <script src="supabase-db.js"></script>
+    <script src="test-chat-saving.js"></script>
     <script src="script.js"></script>
 </body>
 
