--- a/index.html
+++ b/index.html
@@ -518,6 +518,7 @@
     </script>
     <script src="supabase-db.js"></script>
     <script src="test-chat-saving.js"></script>
+    <script src="debug-chat-saving.js"></script>
     <script src="script.js"></script>
 </body>
 
