smooth cursor animation added for desktop

--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="resources.css">
+    <link rel="stylesheet" href="smooth-cursor.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <style>
         /* Prevent flash of unstyled content */
@@ -1502,6 +1503,9 @@
             // Initialize flowing stats animation
             initFlowingStats();
     </script>
+    
+    <!-- Smooth Cursor Script -->
+    <script src="smooth-cursor.js"></script>
 </body>
 
 </html>
