--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
     <!-- Your custom styles -->
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Smooth Cursor Styles -->
+    <link rel="stylesheet" href="smooth-cursor.css">
 
     <!-- SATI Knowledge Base -->
     <script src="sati-knowledge.js"></script>
@@ -517,6 +520,9 @@
         console.log('Supabase version:', window.supabase?.VERSION || 'unknown');
     </script>
     <script src="script.js"></script>
+    
+    <!-- Smooth Cursor Script -->
+    <script src="smooth-cursor.js"></script>
 </body>
 
 </html>
