--- a/resources.html
+++ b/resources.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <link rel="stylesheet" href="resources.css">
+    <link rel="stylesheet" href="smooth-cursor.css">
     <style>
         /* Prevent flash of unstyled content */
         html, body {
@@ -326,6 +327,9 @@
     </div>
 
     <script src="resources.js"></script>
+    
+    <!-- Smooth Cursor Script -->
+    <script src="smooth-cursor.js"></script>
 </body>
 
 </html>
