--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="resources.css">
+    <link rel="stylesheet" href="smooth-cursor.css">
     <style>
         /* Prevent flash of unstyled content */
         html, body {
@@ -822,6 +823,9 @@
             }, 2000);
         });
     </script>
+    
+    <!-- Smooth Cursor Script -->
+    <script src="smooth-cursor.js"></script>
 </body>
 
 </html>
