cool mode animation added

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <!-- Your custom styles -->
     <link rel="stylesheet" href="styles.css">
     
-    <!-- Smooth Cursor Styles -->
-    <link rel="stylesheet" href="smooth-cursor.css">
+
+    <!-- Cool Mode Effect -->
+    <script src="cool-mode.js"></script>
 
     <!-- SATI Knowledge Base -->
     <script src="sati-knowledge.js"></script>
@@ -524,8 +525,6 @@
     <script src="debug-chat-saving.js"></script>
     <script src="script.js"></script>
     
-    <!-- Smooth Cursor Script -->
-    <script src="smooth-cursor.js"></script>
 </body>
 
 </html>
