fix(saved chats) : UI : 1

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 <h3 class="section-title">
                     <i class="fas fa-bookmark"></i>
                     <span>Saved Chats</span>
+                    <span class="saved-count" id="savedChatsCount"></span>
                 </h3>
                 <div class="saved-chats-list" id="savedChatsList">
                     <!-- Saved chats will be populated here -->
