Theme toggle updated, Button's animation added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Your custom styles -->
     <link rel="stylesheet" href="styles.css">
     
-
+    
     <!-- Cool Mode Effect -->
     <script src="cool-mode.js"></script>
 
@@ -81,8 +81,10 @@
             <!-- New Chat Button -->
             <div class="sidebar-section">
                 <button class="new-chat-btn" id="newChatBtn">
-                    <i class="fas fa-plus"></i>
-                    <span>New Chat</span>
+                    <span>
+                        <i class="fas fa-plus"></i>
+                        New Chat
+                    </span>
                 </button>
             </div>
 
@@ -90,7 +92,17 @@
             <div class="sidebar-section">
                 <button class="resources-btn" id="resourcesBtn">
                     <i class="fas fa-book"></i>
-                    <span>Resources</span>
+                    <div class="resources-text">
+                        <span>R</span>
+                        <span>E</span>
+                        <span>S</span>
+                        <span>O</span>
+                        <span>U</span>
+                        <span>R</span>
+                        <span>C</span>
+                        <span>E</span>
+                        <span>S</span>
+                    </div>
                 </button>
             </div>
 
