fixing some sync errors

--- a/index.html
+++ b/index.html
@@ -855,7 +855,9 @@
     <script src="supabase-db.js"></script>
     <script src="test-chat-saving.js"></script>
     <script src="debug-chat-saving.js"></script>
+    <script src="debug-chat-saving-enhanced.js"></script>
     <script src="script.js"></script>
+    <script src="test-fixes.js"></script>
     
 </body>
 
