fixing the saved chats fucntionality because the code is soo soo soo .... longg.... :)

--- a/index.html
+++ b/index.html
@@ -858,6 +858,7 @@
     <script src="debug-chat-saving-enhanced.js"></script>
     <script src="script.js"></script>
     <script src="test-fixes.js"></script>
+    <script src="test-bookmark-functionality.js"></script>
     
 </body>
 
