update(saved chats) : rename | delete | UI sync with all convos section

--- a/index.html
+++ b/index.html
@@ -859,6 +859,7 @@
     <script src="script.js"></script>
     <script src="test-fixes.js"></script>
     <script src="test-bookmark-functionality.js"></script>
+    <script src="test-saved-chats-functionality.js"></script>
     
 </body>
 
