monkey avatar added, Testing/debugging files removed

--- a/about.html
+++ b/about.html
@@ -537,7 +537,7 @@
                     <div class="bottom bottom-s">
                         <div class="content">
                             <span class="name">Safal Tiwari</span>
-                            <span class="about-me">Lead Developer - Full Stack Development, Project
+                            <span class="about-me">Lead Developer - Frontend Development, Project
                                 Architecture</span>
                         </div>
                         <div class="bottom-bottom">
