--- a/index.html
+++ b/index.html
@@ -329,37 +329,98 @@
 
     <!-- Login Modal -->
     <div class="modal-overlay" id="loginModal">
-        <div class="modal-container login-modal">
+        <div class="modal-container login-modal monkey-login-card">
             <div class="modal-header">
-                <h2>🔐 Login to SATI ChatBot</h2>
+                <h2>🔐 Sign In</h2>
                 <button class="close-btn" id="closeLoginBtn">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
             <div class="modal-body">
                 <div class="login-content">
-                    <div class="app-branding">
-                        <div class="logo-large">
-                            <i class="fas fa-robot"></i>
-                        </div>
-                        <h3>SATI ChatBot</h3>
-                        <!-- Removed subtitle for compactness -->
-                    </div>
+                    <input value="" class="blind-check" type="checkbox" id="blind-input" name="blindcheck" hidden="" />
+
                     <form class="login-form" id="loginForm">
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input type="email" id="email" required>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group password-group">
                             <label for="password">Password</label>
-                            <input type="password" id="password" required>
+                            <div class="password-input-container">
+                                <input type="password" id="password" required>
+                                <div class="password-toggle-separator"></div>
+                                <label for="blind-input" class="password-toggle-btn" id="passwordToggleBtn">
+                                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg" class="password-icon">
+                                        <!-- Show password icon (eye open) -->
+                                        <g class="show-icon">
+                                            <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z" stroke="currentColor"
+                                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                fill="none" />
+                                            <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2"
+                                                fill="none" />
+                                        </g>
+                                        <!-- Hide password icon (eye closed with slash) -->
+                                        <g class="hide-icon" style="display: none;">
+                                            <path
+                                                d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
+                                                stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                                stroke-linejoin="round" fill="none" />
+                                            <line x1="1" y1="1" x2="23" y2="23" stroke="currentColor" stroke-width="2"
+                                                stroke-linecap="round" fill="none" />
+                                        </g>
+                                    </svg>
+                                </label>
+                            </div>
                         </div>
                         <div class="auth-actions">
                             <button type="submit" class="login-btn">Login</button>
                             <button type="button" class="login-btn" id="signupBtn">Sign Up</button>
                         </div>
-                        <button type="button" class="guest-btn" id="guestBtn">Continue as Guest</button>
+
                     </form>
+
+                    <label for="blind-input" class="monkey-avatar" id="monkeyAvatar">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" viewBox="0 0 64 64"
+                            id="monkey">
+                            <ellipse cx="53.7" cy="33" rx="8.3" ry="8.2" fill="#89664c"></ellipse>
+                            <ellipse cx="53.7" cy="33" rx="5.4" ry="5.4" fill="#ffc5d3"></ellipse>
+                            <ellipse cx="10.2" cy="33" rx="8.2" ry="8.2" fill="#89664c"></ellipse>
+                            <ellipse cx="10.2" cy="33" rx="5.4" ry="5.4" fill="#ffc5d3"></ellipse>
+                            <g fill="#89664c">
+                                <path
+                                    d="m43.4 10.8c1.1-.6 1.9-.9 1.9-.9-3.2-1.1-6-1.8-8.5-2.1 1.3-1 2.1-1.3 2.1-1.3-20.4-2.9-30.1 9-30.1 19.5h46.4c-.7-7.4-4.8-12.4-11.8-15.2">
+                                </path>
+                                <path
+                                    d="m55.3 27.6c0-9.7-10.4-17.6-23.3-17.6s-23.3 7.9-23.3 17.6c0 2.3.6 4.4 1.6 6.4-1 2-1.6 4.2-1.6 6.4 0 9.7 10.4 17.6 23.3 17.6s23.3-7.9 23.3-17.6c0-2.3-.6-4.4-1.6-6.4 1-2 1.6-4.2 1.6-6.4">
+                                </path>
+                            </g>
+                            <path
+                                d="m52 28.2c0-16.9-20-6.1-20-6.1s-20-10.8-20 6.1c0 4.7 2.9 9 7.5 11.7-1.3 1.7-2.1 3.6-2.1 5.7 0 6.1 6.6 11 14.7 11s14.7-4.9 14.7-11c0-2.1-.8-4-2.1-5.7 4.4-2.7 7.3-7 7.3-11.7"
+                                fill="#e0ac7e"></path>
+                            <g fill="#3b302a" class="monkey-eye-nose">
+                                <path d="m35.1 38.7c0 1.1-.4 2.1-1 2.1-.6 0-1-.9-1-2.1 0-1.1.4-2.1 1-2.1.6.1 1 1 1 2.1">
+                                </path>
+                                <path d="m30.9 38.7c0 1.1-.4 2.1-1 2.1-.6 0-1-.9-1-2.1 0-1.1.4-2.1 1-2.1.5.1 1 1 1 2.1">
+                                </path>
+                                <ellipse cx="40.7" cy="31.7" rx="3.5" ry="4.5" class="monkey-eye-r"></ellipse>
+                                <ellipse cx="23.3" cy="31.7" rx="3.5" ry="4.5" class="monkey-eye-l"></ellipse>
+                            </g>
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" viewBox="0 0 64 64"
+                            id="monkey-hands">
+                            <path fill="#89664C" d="M9.4,32.5L2.1,61.9H14c-1.6-7.7,4-21,4-21L9.4,32.5z"></path>
+                            <path fill="#FFD6BB"
+                                d="M15.8,24.8c0,0,4.9-4.5,9.5-3.9c2.3,0.3-7.1,7.6-7.1,7.6s9.7-8.2,11.7-5.6c1.8,2.3-8.9,9.8-8.9,9.8
+                            s10-8.1,9.6-4.6c-0.3,3.8-7.9,12.8-12.5,13.8C11.5,43.2,6.3,39,9.8,24.4C11.6,17,13.3,25.2,15.8,24.8"></path>
+                            <path fill="#89664C" d="M54.8,32.5l7.3,29.4H50.2c1.6-7.7-4-21-4-21L54.8,32.5z"></path>
+                            <path fill="#FFD6BB"
+                                d="M48.4,24.8c0,0-4.9-4.5-9.5-3.9c-2.3,0.3,7.1,7.6,7.1,7.6s-9.7-8.2-11.7-5.6c-1.8,2.3,8.9,9.8,8.9,9.8
+                            s-10-8.1-9.7-4.6c0.4,3.8,8,12.8,12.6,13.8c6.6,1.3,11.8-2.9,8.3-17.5C52.6,17,50.9,25.2,48.4,24.8"></path>
+                        </svg>
+                    </label>
+
                     <div class="or-section">
                         <span class="or-line"></span>
                         <span class="or-text">or</span>
