--- a/about.html
+++ b/about.html
@@ -618,7 +618,7 @@
                     <div class="bottom bottom-a">
                         <div class="content">
                             <span class="name">Aashutosh Singh Baghel</span>
-                            <span class="about-me">Team Member - Frontend Development, UI/UX Design, API
+                            <span class="about-me">Team Member - Presentator, UI/UX Design and API
                                 Integration</span>
                         </div>
                         <div class="bottom-bottom">
