delete account functionality

--- a/index.html
+++ b/index.html
@@ -279,6 +279,10 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="profile-dropdown-item danger" id="deleteAccountBtn" style="display: none;">
+                                <i class="fas fa-user-times"></i>
+                                <span>Delete Account</span>
+                            </div>
                             <div class="profile-dropdown-item" id="loginLogoutBtn">
                                 <i class="fas fa-sign-in-alt"></i>
                                 <span>Login</span>
