fix(delete account) : card styling fixed and changed delete account option position

--- a/index.html
+++ b/index.html
@@ -279,10 +279,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="profile-dropdown-item danger" id="deleteAccountBtn" style="display: none;">
-                                <i class="fas fa-user-times"></i>
-                                <span>Delete Account</span>
-                            </div>
+
                             <div class="profile-dropdown-item" id="loginLogoutBtn">
                                 <i class="fas fa-sign-in-alt"></i>
                                 <span>Login</span>
@@ -627,6 +624,9 @@
                         </button>
                         <button class="btn btn-secondary" id="editProfileBtn">
                             <i class="fas fa-edit"></i> Edit Profile
+                        </button>
+                        <button class="btn btn-danger" id="deleteAccountBtn" style="display: none;">
+                            <i class="fas fa-user-times"></i> Delete Account
                         </button>
                     </div>
                 </div>
