fix(delete account) : delete account warning card styling fixed

--- a/index.html
+++ b/index.html
@@ -619,13 +619,10 @@
 
                     <div class="profile-actions" id="profileActions">
 
-                        <button class="btn btn-secondary" id="editUsernameBtn">
+                        <button class="btn btn-dark" id="editUsernameBtn">
                             <i class="fas fa-user-edit"></i> Edit Username
                         </button>
-                        <button class="btn btn-secondary" id="editProfileBtn">
-                            <i class="fas fa-edit"></i> Edit Profile
-                        </button>
-                        <button class="btn btn-danger" id="deleteAccountBtn" style="display: none;">
+                        <button class="btn btn-white" id="deleteAccountBtn" style="display: none;">
                             <i class="fas fa-user-times"></i> Delete Account
                         </button>
                     </div>
