adsense tags added

--- a/about.html
+++ b/about.html
@@ -40,6 +40,9 @@
     <link rel="stylesheet" href="smooth-cursor.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
+    <!-- Google Adsense -->
+    <meta name="google-adsense-account" content="ca-pub-1178405148130113">
+
     <script>
         (function () {
             // Get theme from localStorage - check multiple possible keys for compatibility
