--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,9 @@
     <link rel="stylesheet" href="resources.css">
     <link rel="stylesheet" href="contact.css">
 
+    <!-- Google Adsense -->
+    <meta name="google-adsense-account" content="ca-pub-1178405148130113">
+
     <script>
         (function () {
             // Get theme from localStorage - check multiple possible keys for compatibility
