--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -37,6 +37,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="resources.css">
 
+    <!-- Google Adsense -->
+    <meta name="google-adsense-account" content="ca-pub-1178405148130113">
+
     <style>
         /* Prevent flash of unstyled content */
         html,
