--- a/resources.html
+++ b/resources.html
@@ -36,6 +36,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
+    <!-- Google Adsense -->
+    <meta name="google-adsense-account" content="ca-pub-1178405148130113">
+
     <link rel="stylesheet" href="resources.css">
     <style>
         /* Prevent flash of unstyled content */
