adsense file added

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
     <meta name="google-site-verification" content="upBWjLz2WyzNX61wGZ5zMT1dxQtWHtiltxl8MyYN20E" />
     <meta name="google-site-verification" content="zB6GcCt1AW09iFthg2PTOuJk0xignUSqiJ9YOgAA92g" />
 
+    <!-- Google Adsense -->
+    <meta name="google-adsense-account" content="ca-pub-1178405148130113">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1178405148130113"
+        crossorigin="anonymous">
+        </script>
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
@@ -65,11 +72,9 @@
             }); var f = d.getElementsByTagName(s)[0],
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-MZSJ5XNX');</script>
+        })(window, document, 'script', 'dataLayer', 'GTM-MZSJ5XNX');
+    </script>
     <!-- End Google Tag Manager -->
-
-    <!-- Google Adsense -->
-    <meta name="google-adsense-account" content="ca-pub-1178405148130113">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
