--- a/resources.html
+++ b/resources.html
@@ -39,6 +39,10 @@
     <!-- Google Adsense -->
     <meta name="google-adsense-account" content="ca-pub-1178405148130113">
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1178405148130113"
+        crossorigin="anonymous">
+        </script>
+
     <link rel="stylesheet" href="resources.css">
     <style>
         /* Prevent flash of unstyled content */
