--- a/about.html
+++ b/about.html
@@ -43,6 +43,10 @@
     <!-- Google Adsense -->
     <meta name="google-adsense-account" content="ca-pub-1178405148130113">
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1178405148130113"
+        crossorigin="anonymous">
+        </script>
+
     <script>
         (function () {
             // Get theme from localStorage - check multiple possible keys for compatibility
